Adding create ingest pipeline step (#558)
* adding create ingest pipeline step

Signed-off-by: Amit Galitzky <amgalitz@amazon.com>

* adding IT and move configurations parsing to input parsing

Signed-off-by: Amit Galitzky <amgalitz@amazon.com>

* cleaning up comments

Signed-off-by: Amit Galitzky <amgalitz@amazon.com>

---------

Signed-off-by: Amit Galitzky <amgalitz@amazon.com>